--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "triangle-wasm": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
