--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "electron:preview": "npm run build && electron ."
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/three": "^0.182.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "three": "^0.182.0",
     "triangle-wasm": "^1.0.0",
     "web-ifc": "^0.0.75"
@@ -27,6 +30,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "electron": "^40.1.0",
     "electron-builder": "^26.4.0",
+    "playwright": "^1.58.2",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   }
